Opened 14 years ago

Closed 10 years ago

#6905 closed bug (fixed)

[Interface Kit] BTabView focus drawing glitch

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/DiskUsage Version: R1/Development
Keywords: GCI2011 Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev39614 gcc4hybrid.

Attachments (2)

DiskUsage.png (18.3 KB ) - added by diver 14 years ago.
Screen Shot 2011-12-18 at 6.41.11 PM.png (33.9 KB ) - added by ctbeiser 13 years ago.
DiskUsage

Download all attachments as: .zip

Change History (8)

by diver, 14 years ago

Attachment: DiskUsage.png added

comment:1 by stpere, 14 years ago

Component: Kits/Network KitKits/Interface Kit

by ctbeiser, 13 years ago

DiskUsage

comment:2 by ctbeiser, 13 years ago

Unless I'm misunderstanding this bug, I can't replicate it in hrev43524. I've attached a screenshot of how it looks for me.

comment:3 by ctbeiser, 13 years ago

Keywords: GCI2011 added

comment:4 by diver, 13 years ago

You should use Tab key to navigate to that tab.

comment:5 by diver, 10 years ago

Still here in hrev48415.

comment:6 by pulkomandy, 10 years ago

Component: Kits/Interface KitApplications/DiskUsage
Resolution: fixed
Status: newclosed

Fixed in hrev48422. Problem was only in DiskUsage (because it adds an icon to the tab). If you get the same problem in other apps unfortunately each of them need to be fixed separately.

Note: See TracTickets for help on using tickets.