DiskUsage: align tab focus mark with label.

Fixes #6905.